# bartleby

./: .gitignore  .vercelignore  DESIGN.md  GALLERY.md  HOSTED_API.md  MODELS.md  NEXT.md  PLAN.md  PRICING.md  PRINCIPLES.md  README.md  RELEASE.md  VISION.md  index.html  package.json  pnpm-lock.yaml
.cargo/: config.toml
.github/workflows/: web-deploy.yml
design-system-extensions/: README.md  marketing-hero.md  mode-switch.md  overlay.md  permission.md  settings.md
design-system/bartleby/: README.md
public/fonts/: D2Coding-OFL.txt
relay/: .env.example  README.md  package-lock.json  package.json
relay/src/: auth.js  config.js  http.js  server.js  soniox.js  upstage.js
relay/systemd/: bartleby-relay.service
relay/test/: auth.test.js  soniox.test.js  upstage.test.js
scripts/: build-mic-sidecar.mjs  dev-run.sh  ship-release.mjs  verify-mic.sh
src/: App.css  App.tsx  Settings.module.css  Settings.tsx  main.tsx
src-tauri/: Cargo.toml  Info.plist  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/examples/: remux_session.rs
src-tauri/icons/: icon.icns
src-tauri/src/: dictation.rs  dictation_hotkey.rs  inject.rs  lib.rs  main.rs  registration.rs  secrets.rs
src-tauri/src/capture/: encoding.rs  mic.rs  mic_avengine.rs  mic_dictation.rs  mod.rs  permission.rs  rss.rs  silence.rs  system_audio.rs
src-tauri/src/stt/: mod.rs  resample.rs  ring.rs  soniox.rs
src-tauri/src/summary/: finalize.rs  mod.rs  upstage.rs
src-tauri/src/translate/: mod.rs  upstage.rs
src-tauri/swift/: bartleby-mic.swift
src/analytics/: analytics.ts
src/components/: KeyInput.module.css  KeyInput.tsx  Segmented.module.css  Segmented.tsx  Slider.module.css  Slider.tsx  Toggle.module.css  Toggle.tsx
src/dictation/: DictationList.module.css  DictationList.tsx  Overlay.module.css  Overlay.tsx  dictationsStore.ts
src/gallery/: Gallery.module.css  Gallery.tsx
src/meeting/: AudioPlayer.tsx  Library.module.css  Library.tsx  Meeting.module.css  Meeting.tsx  Recording.module.css  Recording.tsx  RecordingControls.module.css  RecordingControls.tsx  SessionDetail.module.css  SessionDetail.tsx  Sidebar.module.css  Sidebar.tsx  SummaryPanel.module.css  SummaryPanel.tsx  TranscriptView.module.css  TranscriptView.tsx  sessionsStore.ts  types.ts
src/onboarding/: Onboarding.module.css  Onboarding.tsx
src/settings/: AboutTab.module.css  AboutTab.tsx  KeysTab.module.css  KeysTab.tsx  ModesTab.module.css  ModesTab.tsx  RecordingTab.module.css  RecordingTab.tsx  Settings.module.css  Settings.tsx  ShortcutsTab.module.css  ShortcutsTab.tsx  StorageTab.module.css  StorageTab.tsx  prefs.ts
src/styles/: components.css  fonts.css
src/types/: capture.ts
src/update/: UpdateModal.module.css  UpdateModal.tsx  updater.ts
web/: analytics.js  changelog.html  index.html  latest.json  package-lock.json  package.json  pricing.html  privacy.html  terms.html  vercel.json
web/api/: early-access.js  review.js  usage.js
web/releases/: Bartleby_0.1.0_universal.app.tar.gz.sig  Bartleby_0.1.1_universal.app.tar.gz.sig  Bartleby_0.1.2_universal.app.tar.gz.sig  Bartleby_0.1.3_universal.app.tar.gz.sig  Bartleby_0.1.4_universal.app.tar.gz.sig  Bartleby_0.1.5_universal.app.tar.gz.sig  Bartleby_0.1.6_universal.app.tar.gz.sig  Bartleby_0.1.7_universal.app.tar.gz.sig  Bartleby_0.1.8_universal.app.tar.gz.sig  Bartleby_0.1.9_universal.app.tar.gz.sig
(+16 files in other folders)
