[package]
name = "bartleby"
version = "0.1.0"
description = "Korean ears for English audio"
authors = ["Sihyun Kim"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "bartleby_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
anyhow = "1"
bytemuck = "1"
hound = "3.5"
libc = "0.2"
ogg = "0.9"
opus = "0.3"
screencapturekit = "2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["macos-private-api", "tray-icon", "image-png"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-opener = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time", "sync"] }
tokio-tungstenite = { version = "0.24", features = ["connect", "handshake", "native-tls"] }
futures-util = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "native-tls", "http2", "stream"] }
keyring = "3"

